5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1674_1100.log
== TEST (2019-04-30 11:11:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula")))

if (cedula == 2):
	print("entada: ", cedula)
	print("animal: ", "Tartaruga")
elif (cedula == 5):
	print("entrada: ", cadula)
	print("animal: ", "Garca")
elif (cedula == 10):
	print("entrada: ", cadula)
	print("animal: ", "Arara")
elif (cedula == 20):
	print("entrada: ", cadula)
	print("animal: ", "mico-leao dourado")
elif (cedula == 50):
	print("entrada: ", cadula)
	print("animal: ", "Onca-pintada")
elif (cedula == 100):
	print("entrada: ", cadula)
	print("animal: ", "Garoupa")
else: 
	print("entrada: ", cadula)
	print("animal: ", "Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("entrada: ", cadula)
NameError: name 'cadula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:11:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ", cedula)
	print("animal: ", "Tartaruga")
elif (cedula == 5):
	print("entrada: ", cadula)
	print("animal: ", "Garca")
elif (cedula == 10):
	print("entrada: ", cadula)
	print("animal: ", "Arara")
elif (cedula == 20):
	print("entrada: ", cadula)
	print("animal: ", "mico-leao dourado")
elif (cedula == 50):
	print("entrada: ", cadula)
	print("animal: ", "Onca-pintada")
elif (cedula == 100):
	print("entrada: ", cadula)
	print("animal: ", "Garoupa")
else: 
	print("entrada: ", cadula)
	print("animal: ", "Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("entrada: ", cadula)
NameError: name 'cadula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ", cedula)
	print("animal: ", "Tartaruga")
elif (cedula == 5):
	print("entrada: ", cedula)
	print("animal: ", "Garca")
elif (cedula == 10):
	print("entrada: ", cedula)
	print("animal: ", "Arara")
elif (cedula == 20):
	print("entrada: ", cedula)
	print("animal: ", "mico-leao dourado")
elif (cedula == 50):
	print("entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif (cedula == 100):
	print("entrada: ", cedula)
	print("animal: ", "Garoupa")
else: 
	print("entrada: ", cedula)
	print("animal: ", "Invalido")
-- OUTPUT:
entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ", cedula)
	print("animal: ", "Tartaruga")
elif (cedula == 5):
	print("entrada: ", cedula)
	print("animal: ", "Garca")
elif (cedula == 10):
	print("entrada: ", cedula)
	print("animal: ", "Arara")
elif (cedula == 20):
	print("entrada: ", cedula)
	print("animal: ", "mico-leao dourado")
elif (cedula == 50):
	print("entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif (cedula == 100):
	print("entrada: ", cedula)
	print("animal: ", "Garoupa")
else: 
	print("entrada: ", cedula)
	print("animal: ", "Invalido")
-- EXECUTION TIME:
0.136529
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:13:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ", cedula)
	print("animal: ", "Tartaruga")
elif (cedula == 5):
	print("entrada: ", cedula)
	print("animal: ", "Garca")
elif (cedula == 10):
	print("entrada: ", cedula)
	print("animal: ", "Arara")
elif (cedula == 20):
	print("entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif (cedula == 100):
	print("entrada: ", cedula)
	print("animal: ", "Garoupa")
else: 
	print("entrada: ", cedula)
	print("animal: ", "Invalido")
-- EXECUTION TIME:
0.112006
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:13:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ", cedula)
	print("animal: ", "Tartaruga")
elif (cedula == 5):
	print("entrada: ", cedula)
	print("animal: ", "Garca")
elif (cedula == 10):
	print("entrada: ", cedula)
	print("animal: ", "Arara")
elif (cedula == 20):
	print("entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif (cedula == 100):
	print("entrada: ", cedula)
	print("animal: ", "Garoupa")
else: 
	print("entrada: ", cedula)
	print("animal: ", "Invalido")
-- OUTPUT:
entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:14:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ",cedula)
	print("animal: ","Tartaruga")
elif (cedula == 5):
	print("entrada: ",cedula)
	print("animal: ","Garca")
elif (cedula == 10):
	print("entrada: ",cedula)
	print("animal: ","Arara")
elif (cedula == 20):
	print("entrada: ",cedula)
	print("animal: ","Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal: ","Onca-pintada")
elif (cedula == 100):
	print("entrada: ",cedula)
	print("animal: ","Garoupa")
else: 
	print("entrada: ",cedula)
	print("animal: ","Invalido")
-- EXECUTION TIME:
0.210742
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:14:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ",cedula)
	print("animal: ","Tartaruga")
elif (cedula == 5):
	print("entrada: ",cedula)
	print("animal: ","Garca")
elif (cedula == 10):
	print("entrada: ",cedula)
	print("animal: ","Arara")
elif (cedula == 20):
	print("entrada: ",cedula)
	print("animal: ","Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal: ","Onca-pintada")
elif (cedula == 100):
	print("entrada: ",cedula)
	print("animal: ","Garoupa")
else: 
	print("entrada: ",cedula)
	print("animal: ","Invalido")
-- OUTPUT:
entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:14:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada: ",cedula)
	print("animal: ","Tartaruga")
elif (cedula == 5):
	print("entrada: ",cedula)
	print("animal: ","Garca")
elif (cedula == 10):
	print("entrada: ",cedula)
	print("animal: ","Arara")
elif (cedula == 20):
	print("entrada: ",cedula)
	print("animal:","Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal: ","Onca-pintada")
elif (cedula == 100):
	print("entrada: ",cedula)
	print("animal: ","Garoupa")
else: 
	print("entrada: ",cedula)
	print("animal: ","Invalido")
-- OUTPUT:
entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:15:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada:",cedula)
	print("animal:","Tartaruga")
elif (cedula == 5):
	print("entrada:",cedula)
	print("animal:","Garca")
elif (cedula == 10):
	print("entrada:",cedula)
	print("animal:","Arara")
elif (cedula == 20):
	print("entrada:",cedula)
	print("animal:","Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal:","Onca-pintada")
elif (cedula == 100):
	print("entrada:",cedula)
	print("animal:","Garoupa")
else: 
	print("entrada:",cedula)
	print("animal:","Invalido")
-- EXECUTION TIME:
0.174688
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada:  50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:15:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada:",cedula)
	print("animal:","Tartaruga")
elif (cedula == 5):
	print("entrada:",cedula)
	print("animal:","Garca")
elif (cedula == 10):
	print("entrada:",cedula)
	print("animal:","Arara")
elif (cedula == 20):
	print("entrada:",cedula)
	print("animal:","Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal:","Onca-pintada")
elif (cedula == 100):
	print("entrada:",cedula)
	print("animal:","Garoupa")
else: 
	print("entrada:",cedula)
	print("animal:","Invalido")
-- OUTPUT:
entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:15:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada:",cedula)
	print("animal:","Tartaruga")
elif (cedula == 5):
	print("entrada:",cedula)
	print("animal:","Garca")
elif (cedula == 10):
	print("entrada:",cedula)
	print("animal:","Arara")
elif (cedula == 20):
	print("entrada:",cedula)
	print("animal:","Mico-leao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal:","Onca-pintada")
elif (cedula == 100):
	print("entrada:",cedula)
	print("animal:","Garoupa")
else: 
	print("entrada:",cedula)
	print("animal:","Invalido")
-- EXECUTION TIME:
0.133004
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Valor da cedula: entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Valor da cedula: entrada:  50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:15:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada:",cedula)
	print("animal:","Tartaruga")
elif (cedula == 5):
	print("entrada:",cedula)
	print("animal:","Garca")
elif (cedula == 10):
	print("entrada:",cedula)
	print("animal:","Arara")
elif (cedula == 20):
	print("entrada:",cedula)
	print("animal:","Mico-1eao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal:","Onca-pintada")
elif (cedula == 100):
	print("entrada:",cedula)
	print("animal:","Garoupa")
else: 
	print("entrada:",cedula)
	print("animal:","Invalido")
-- EXECUTION TIME:
0.250364
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada:  50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:15:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))

if (cedula == 2):
	print("entada:",cedula)
	print("animal:","Tartaruga")
elif (cedula == 5):
	print("entrada:",cedula)
	print("animal:","Garca")
elif (cedula == 10):
	print("entrada:",cedula)
	print("animal:","Arara")
elif (cedula == 20):
	print("entrada:",cedula)
	print("animal:","Mico-1eao-dourado")
elif (cedula == 50):
	print("entrada: ",cedula)
	print("animal:","Onca-pintada")
elif (cedula == 100):
	print("entrada:",cedula)
	print("animal:","Garoupa")
else: 
	print("entrada:",cedula)
	print("animal:","Invalido")
-- OUTPUT:
entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:27:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
	if (cedula == 2):
		print("entada:",cedula)
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("entrada:",cedula)
		print("animal:","Garca")
	elif (cedula == 10):
		print("entrada:",cedula)
		print("animal:","Arara")
	elif (cedula == 20):
		print("entrada:",cedula)
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("entrada: ",cedula)
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("entrada:",cedula)
		print("animal:","Garoupa")
	else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.128462
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 8
    if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
                                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:28:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
	if (cedula == 2):
		print("entada:",cedula)
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("entrada:",cedula)
		print("animal:","Garca")
	elif (cedula == 10):
		print("entrada:",cedula)
		print("animal:","Arara")
	elif (cedula == 20):
		print("entrada:",cedula)
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("entrada: ",cedula)
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("entrada:",cedula)
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.126942
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 8
    if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
                                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:28:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
	if (cedula == 2):
		print("entada:",cedula)
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("entrada:",cedula)
		print("animal:","Garca")
	elif (cedula == 10):
		print("entrada:",cedula)
		print("animal:","Arara")
	elif (cedula == 20):
		print("entrada:",cedula)
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("entrada: ",cedula)
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("entrada:",cedula)
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- ERROR:
File "XXXX", line 8
    if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
                                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:28:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
	if (cedula == 2):
		print("entada:",cedula)
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("entrada:",cedula)
		print("animal:","Garca")
	elif (cedula == 10):
		print("entrada:",cedula)
		print("animal:","Arara")
	elif (cedula == 20):
		print("entrada:",cedula)
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("entrada: ",cedula)
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("entrada:",cedula)
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- ERROR:
File "XXXX", line 8
    if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)
                                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:28:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
	if (cedula == 2):
		print("entada:",cedula)
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("entrada:",cedula)
		print("animal:","Garca")
	elif (cedula == 10):
		print("entrada:",cedula)
		print("animal:","Arara")
	elif (cedula == 20):
		print("entrada:",cedula)
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("entrada: ",cedula)
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("entrada:",cedula)
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.187494
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
entrada:  50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:28:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
	if (cedula == 2):
		print("entada:",cedula)
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("entrada:",cedula)
		print("animal:","Garca")
	elif (cedula == 10):
		print("entrada:",cedula)
		print("animal:","Arara")
	elif (cedula == 20):
		print("entrada:",cedula)
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("entrada: ",cedula)
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("entrada:",cedula)
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- OUTPUT:
entrada: 100
entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:29:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if (cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
	if (cedula == 2):
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("animal:","Garca")
	elif (cedula == 10):
		print("animal:","Arara")
	elif (cedula == 20):
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.196013
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:30:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
	if (cedula == 2):
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("animal:","Garca")
	elif (cedula == 10):
		print("animal:","Arara")
	elif (cedula == 20):
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.293546
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 8
    if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
                                                                                                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:30:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
	if (cedula == 2):
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("animal:","Garca")
	elif (cedula == 10):
		print("animal:","Arara")
	elif (cedula == 20):
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- ERROR:
File "XXXX", line 8
    if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100):
                                                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:30:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)):
	if (cedula == 2):
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("animal:","Garca")
	elif (cedula == 10):
		print("animal:","Arara")
	elif (cedula == 20):
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.171098
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:30:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)):
	if (cedula == 2):
		print("animal:","Tartaruga")
	elif (cedula == 5):
		print("animal:","Garca")
	elif (cedula == 10):
		print("animal:","Arara")
	elif (cedula == 20):
		print("animal:","Mico-leao-dourado")
	elif (cedula == 50):
		print("animal:","Onca-pintada")
	elif (cedula == 100):
		print("animal:","Garoupa")
	
else: 
		print("animal:","Invalido")
-- OUTPUT:
entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:31:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)):
	if (cedula == 2):
		print("animal: Tartaruga")
	elif (cedula == 5):
		print("animal: Garca")
	elif (cedula == 10):
		print("animal: Arara")
	elif (cedula == 20):
		print("animal: Mico-leao-dourado")
	elif (cedula == 50):
		print("animal: Onca-pintada")
	elif (cedula == 100):
		print("animal: Garoupa")
	
else: 
		print("animal:","Invalido")
-- EXECUTION TIME:
0.143749
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:31:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula = (int(input("Valor da cedula: ")))
print("entrada:", cedula)

if ((cedula == 2) or (cedula == 5) or (cedula == 10) or (cedula == 20) or (cedula == 50) or (cedula == 100)):
	if (cedula == 2):
		print("animal: Tartaruga")
	elif (cedula == 5):
		print("animal: Garca")
	elif (cedula == 10):
		print("animal: Arara")
	elif (cedula == 20):
		print("animal: Mico-leao-dourado")
	elif (cedula == 50):
		print("animal: Onca-pintada")
	elif (cedula == 100):
		print("animal: Garoupa")
	
else: 
		print("animal:","Invalido")
-- OUTPUT:
entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:34:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)

if (c==2 or c==5 or c==10 or c==20 or c==50 or c==100):
	if (c==2):
		print("animal: Tartaruga")
	elif (c==5):
		print("animal: Garca")
	elif (c==10):
		print("animal: Arara")
	elif (c==20):
		print("animal: Mico-leao-dourado")
	elif (c==50):
		print("animal: Onca-pintada")
	elif (c==100):
		print("animal: Garoupa")
	
else: 
		print("animal: Invalido")
-- EXECUTION TIME:
0.213667
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:34:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)

if (c==2 or c==5 or c==10 or c==20 or c==50 or c==100):
	if (c==2):
		print("animal: Tartaruga")
	elif (c==5):
		print("animal: Garca")
	elif (c==10):
		print("animal: Arara")
	elif (c==20):
		print("animal: Mico-leao-dourado")
	elif (c==50):
		print("animal: Onca-pintada")
	elif (c==100):
		print("animal: Garoupa")
	
else: 
		print("animal: Invalido")
-- OUTPUT:
entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:37:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)

if (c==2 or c==5 or c==10 or c==20 or c==50 or c==100):
	if (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
		print("Animal: Garca")
	elif (c==10):
		print("Animal: Arara")
	elif (c==20):
		print("Animal: Mico-leao-dourado")
	elif (c==50):
		print("Animal: Onca-pintada")
	elif (c==100):
		print("Animal: Garoupa")
	
else: 
		print("Animal: Invalido")
-- EXECUTION TIME:
0.138356
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:37:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)

if (c==2 or c==5 or c==10 or c==20 or c==50 or c==100):
	if (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
		print("Animal: Garca")
	elif (c==10):
		print("Animal: Arara")
	elif (c==20):
		print("Animal: Mico-leao-dourado")
	elif (c==50):
		print("Animal: Onca-pintada")
	elif (c==100):
		print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.166912
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:37:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)

if (c==2 or c==5 or c==10 or c==20 or c==50 or c==100):
	if (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
		print("Animal: Garca")
	elif (c==10):
		print("Animal: Arara")
	elif (c==20):
		print("Animal: Mico-leao-dourado")
	elif (c==50):
		print("Animal: Onca-pintada")
	elif (c==100):
		print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:37:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)

if (c==2 or c==5 or c==10 or c==20 or c==50 or c==100):
	if (c==2):
		print("Animal: Tartaruga")
	elif (c==5):
		print("Animal: Garca")
	elif (c==10):
		print("Animal: Arara")
	elif (c==20):
		print("Animal: Mico-leao-dourado")
	elif (c==50):
		print("Animal: Onca-pintada")
	elif (c==100):
		print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.214806
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Valor da cedula? entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Valor da cedula? entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:38:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.15947
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:38:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:38:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.151973
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

c = int(input("Valor da cedula? "))
print("entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- OUTPUT:
entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:42:02) 
-- CODE:
c = int(input("Valor da cedula? "))
print("Entrada:", c)


if (c==2):
	print("Animal: Tartaruga")
elif (c==5):
	print("Animal: Garca")
elif (c==10):
	print("Animal: Arara")
elif (c==20):
	print("Animal: Mico-leao-dourado")
elif (c==50):
	print("Animal: Onca-pintada")
elif (c==100):
	print("Animal: Garoupa")
	
else: 
	print("Animal: Invalido")
-- EXECUTION TIME:
0.121528
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
